# oracle-sysvinit

./: ChangeLog  Makefile.in  README  _pkg-functions.in  build_expand.sh.in  build_test.sh  configure  configure.ac  ldap.ora  limits.conf  listener.ora.in  logrotate.conf.in  ora_env.sh  ora_env.sh.in  oracle-asm-functions.in  oracle-asm.in  oracle-base-functions.in  oracle-dbconsole-functions.in  oracle-dbconsole.in  oracle-grid-functions.in  oracle-grid.in  oracle-listener-functions.in  oracle-listener.in  oracle-rdbms-functions.in  oracle-rdbms.in  oracle-restart-functions.in  oracle-restart.in  oracle-sysvinit-functions.in  oracle.conf  oracle.in  sqlnet.ora.in  sysctl.conf  test.sh.in  tnsnames.ora
debian/: README.Debian  changelog  control  copyright  oracle-sysvinit-asm.install  oracle-sysvinit-asm.postinst  oracle-sysvinit-asm.postrm  oracle-sysvinit-asm.prerm  oracle-sysvinit-dbconsole.install  oracle-sysvinit-dbconsole.postinst  oracle-sysvinit-dbconsole.postrm  oracle-sysvinit-dbconsole.prerm  oracle-sysvinit-grid.install  oracle-sysvinit-grid.postinst  oracle-sysvinit-grid.postrm  oracle-sysvinit-grid.prerm  oracle-sysvinit-listener.install  oracle-sysvinit-listener.postinst  oracle-sysvinit-listener.postrm  oracle-sysvinit-listener.prerm  oracle-sysvinit-rdbms.install  oracle-sysvinit-rdbms.postinst  oracle-sysvinit-rdbms.postrm  oracle-sysvinit-rdbms.prerm  oracle-sysvinit-restart.install  oracle-sysvinit-restart.postinst  oracle-sysvinit-restart.postrm  oracle-sysvinit-restart.prerm  oracle-sysvinit.conffiles  oracle-sysvinit.docs  oracle-sysvinit.install  rules
redhat/: oracle-sysvinit.spec
